fix(invidious): style missing color while i'm at it

--- a/styles/invidious/catppuccin.user.css
+++ b/styles/invidious/catppuccin.user.css
@@ -266,6 +266,11 @@
         background-color: @mantle !important;
       }
     }
+
+    /* watch progress on videos */
+    div.watched-indicator {
+      background-color: @red;
+    }
   }
 
   /* synced colorscheme */
